[gd_scene load_steps=16 format=3 uid="uid://dh4cjxs7i6o8c"]

[ext_resource type="Script" uid="uid://cu4wbcc2qn18p" path="res://Scripts/Buttons/pause_menu.gd" id="1_87pjb"]
[ext_resource type="Script" uid="uid://dma16kredqnfv" path="res://Scripts/floating_ui.gd" id="2_dm8fx"]
[ext_resource type="Script" uid="uid://cq7cboq7cayw0" path="res://Scripts/Buttons/GamepadUI.gd" id="2_gauam"]
[ext_resource type="Texture2D" uid="uid://ctdmg0n2p42nd" path="res://Assets/Icons/menu.svg" id="3_60wth"]
[ext_resource type="Texture2D" uid="uid://dhktegc0h20rg" path="res://Assets/Icons/close.svg" id="4_x5f66"]
[ext_resource type="Script" uid="uid://di4cltbqi0734" path="res://Scripts/Buttons/shadow_texture_button.gd" id="5_1twl6"]
[ext_resource type="Texture2D" uid="uid://dnpcfbs2utfjp" path="res://Assets/Icons/home.svg" id="6_3c6h6"]
[ext_resource type="Script" uid="uid://b8h2a4n231ekm" path="res://Scripts/Buttons/drop_down_button.gd" id="6_ka15y"]
[ext_resource type="Texture2D" uid="uid://bjr6dxpi0x8o4" path="res://Assets/Icons/refresh.svg" id="7_6n21h"]
[ext_resource type="Texture2D" uid="uid://dkeqs1v1awguo" path="res://Assets/Icons/settings.svg" id="8_hp646"]
[ext_resource type="Texture2D" uid="uid://2eo0tyo67nvn" path="res://Assets/Sprites/Glyphs/PLAYSTATION/Start.tres" id="8_itmgh"]
[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="11_wn772"]
[ext_resource type="Script" uid="uid://0nsq1vq0ti1l" path="res://Scripts/tutorial_text.gd" id="12_xwobk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_02sbc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ylv5p"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 100
material = SubResource("ShaderMaterial_02sbc")
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_87pjb")
showPosition = Vector2(6.5, 0.5)

[node name="Blur" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ylv5p")
layout_mode = 0
offset_left = -500.0
offset_top = -223.0
offset_right = 2517.0
offset_bottom = 1499.0

[node name="SuperContainer" type="Control" parent="." node_paths=PackedStringArray("FirstControl")]
anchors_preset = 0
script = ExtResource("2_gauam")
FirstControl = NodePath("Container/Control/DropDownButton")

[node name="Container" type="Control" parent="SuperContainer"]
anchors_preset = 0
offset_left = -214.0
offset_top = -47.0
offset_right = 204.0
offset_bottom = 48.0
pivot_offset = Vector2(215, 47)
mouse_filter = 2

[node name="Control" type="Control" parent="SuperContainer/Container"]
anchors_preset = 0
scale = Vector2(0.25, 0.25)
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="DropDownButton" type="TextureButton" parent="SuperContainer/Container/Control"]
layout_mode = 2
offset_left = -4.0
offset_top = -4.0
offset_right = 380.0
offset_bottom = 380.0
pivot_offset = Vector2(47, 46)
focus_neighbor_left = NodePath("../../DropdownSection/DropDownMenu/CenterContainer/QuitButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../DropdownSection/DropDownMenu/CenterContainer2/RestartButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../DropdownSection/DropDownMenu/CenterContainer2/RestartButton")
focus_previous = NodePath("../../DropdownSection/DropDownMenu/CenterContainer/QuitButton")
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("3_60wth")
script = ExtResource("6_ka15y")
OpenMenuTexture = ExtResource("4_x5f66")
CloseMenuTexture = ExtResource("3_60wth")
selectSize = 1.3

[node name="GamepadIcon" type="TextureRect" parent="SuperContainer/Container/Control/DropDownButton"]
layout_mode = 0
offset_left = 348.0
offset_top = 92.0
offset_right = 548.0
offset_bottom = 292.0
texture = ExtResource("8_itmgh")

[node name="DropdownSection" type="Control" parent="SuperContainer/Container"]
clip_contents = true
layout_mode = 2
anchors_preset = 0
anchor_left = 0.208
anchor_right = 1.021
anchor_bottom = 1.034
offset_left = 5.056
offset_right = -226.778
offset_bottom = -90.23
scale = Vector2(4.29972, 12.2796)
mouse_filter = 2

[node name="DropDownMenu" type="HBoxContainer" parent="SuperContainer/Container/DropdownSection"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.082
anchor_top = 0.062
anchor_right = 2.057
anchor_bottom = 2.042
offset_left = 0.0219998
offset_top = 0.00399998
offset_right = 207.123
offset_bottom = 85.164
scale = Vector2(0.05, 0.017)
mouse_filter = 2
theme_override_constants/separation = 150

[node name="CenterContainer2" type="CenterContainer" parent="SuperContainer/Container/DropdownSection/DropDownMenu"]
layout_mode = 2
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="RestartButton" type="TextureButton" parent="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../Control/DropDownButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../CenterContainer3/SettingsButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../CenterContainer3/SettingsButton")
focus_previous = NodePath("../../../../Control/DropDownButton")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_6n21h")
script = ExtResource("5_1twl6")
selectSize = 1.3

[node name="CenterContainer3" type="CenterContainer" parent="SuperContainer/Container/DropdownSection/DropDownMenu"]
layout_mode = 2
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="SettingsButton" type="TextureButton" parent="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../../CenterContainer2/RestartButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../CenterContainer/QuitButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../CenterContainer/QuitButton")
focus_previous = NodePath("../../CenterContainer2/RestartButton")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_hp646")
script = ExtResource("5_1twl6")
selectSize = 1.3

[node name="CenterContainer" type="CenterContainer" parent="SuperContainer/Container/DropdownSection/DropDownMenu"]
layout_mode = 2
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="QuitButton" type="TextureButton" parent="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../CenterContainer3/SettingsButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../../../Control/DropDownButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../../../Control/DropDownButton")
focus_previous = NodePath("../../CenterContainer3/SettingsButton")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_3c6h6")
script = ExtResource("5_1twl6")
selectSize = 1.3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="RichTextLabel" parent="CanvasLayer/Control"]
z_index = 30
layout_mode = 0
offset_left = 284.0
offset_top = 1380.0
offset_right = 838.0
offset_bottom = 1408.0
scale = Vector2(2, 2)
pivot_offset = Vector2(272.995, 9.7619)
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/normal_font = ExtResource("11_wn772")
bbcode_enabled = true
text = "FEEDBACK_HINT_KEYBOARD"
fit_content = true
scroll_active = false
vertical_alignment = 1
script = ExtResource("12_xwobk")
controller_input = "FEEDBACK_HINT_GAMEPAD"
mouse_and_keyboard_input = "FEEDBACK_HINT_KEYBOARD"
vertical_intensity = 12.0
horizontal_intensity = 10

[connection signal="focus_entered" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_entered"]
[connection signal="focus_entered" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_pressed"]
[connection signal="toggled" from="SuperContainer/Container/Control/DropDownButton" to="." method="_on_drop_down_button_toggled"]
[connection signal="toggled" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_toggled"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_entered"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_pressed"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_entered"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_pressed"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_pressed"]
